force-app/main/default/objects/Product2/fields/Availibility__c.field-meta.xml
<CustomField>
    <fullName>Availibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availibility</label>
    <type>Checkbox</type>
</CustomField>