force-app/main/default/objects/Product2/fields/property_type__c.field-meta.xml
<CustomField>
    <fullName>property_type__c</fullName>
    <label>property type</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>