force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Location__c</columns>
    <columns>price__c</columns>
    <columns>Rooms__c</columns>
    <columns>property_type__c</columns>
    <columns>Availibility__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Properties</label>
</ListView>