force-app/main/default/objects/Product2/listViews/Property_list.listView-meta.xml
<ListView>
    <fullName>Property_list</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Location__c</columns>
    <columns>price__c</columns>
    <columns>Rooms__c</columns>
    <columns>property_type__c</columns>
    <columns>Availibility__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Availibility__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>price__c</field>
        <operation>lessOrEqual</operation>
    </filters>
    <filters>
        <field>property_type__c</field>
        <operation>equals</operation>
        <value>Villa</value>
    </filters>
    <label>Property list</label>
</ListView>